--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf dist && webpack --mode production",
+    "build": "rimraf dist && webpack --mode production",
     "dev": "webpack serve"
   },
   "repository": {
@@ -19,8 +19,7 @@
   },
   "homepage": "https://github.com/NadinPhil/mesto#readme",
   "dependencies": {
-    "core-js": "^3.19.1",
-    "jquery": "^3.6.0"
+    "core-js": "^3.19.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -35,6 +34,7 @@
     "postcss-loader": "^6.2.0",
     "webpack": "^5.62.2",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.4.0"
+    "webpack-dev-server": "^4.4.0",
+    "jquery": "^3.6.0"
   }
 }
