--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "rimraf dist && webpack --mode production",
-    "dev": "webpack serve"
+    "dev": "webpack serve",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -29,12 +31,13 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.1",
     "cssnano": "^5.0.10",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
+    "jquery": "^3.6.0",
     "mini-css-extract-plugin": "^2.4.4",
     "postcss-loader": "^6.2.0",
     "webpack": "^5.62.2",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.4.0",
-    "jquery": "^3.6.0"
+    "webpack-dev-server": "^4.4.0"
   }
 }
